--- a/css/styles.css
+++ b/css/styles.css
@@ -528,17 +528,21 @@ background-color: #F5F4FA;
 
     /* Filters */
 
-.filters-list {
+.filters {
     display: flex;
     justify-content: center;
 }
 
-        
-.filter-item + .filter-item {
+.filters__item {
     margin-left: 8px;
 }
 
-.filter-btn {
+        
+.filters__item:first-child {
+    margin-left: 0; 
+}
+
+.filters-button {
     padding: 6px 22px;
     min-width:73px;
     border-radius: 4px;
@@ -566,8 +570,8 @@ background-color: #F5F4FA;
 }
 
 
-.filter-btn:hover,
-.filter-btn:focus {
+.filters-button:hover,
+.filters-button:focus {
     color: var(--white-color);
     background-color:  var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -576,12 +580,12 @@ background-color: #F5F4FA;
 
     /* Progects */
 
-.progects-list {
+.portfolio__list {
     display: flex;
     flex-wrap: wrap;
 }
 
-.progects-items {
+.portfolio__item {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -589,15 +593,15 @@ background-color: #F5F4FA;
     
 }
 
-.progects-items:nth-child(3n) {
+.portfolio__item:nth-child(3n) {
     margin-right: 0;
 }
     
-.progects-items:nth-last-child(-n + 3) {
+.portfolio__item:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
 
-.progect-link {
+.portfolio__link {
     
     display: block;
     text-decoration: none;
@@ -605,25 +609,25 @@ background-color: #F5F4FA;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.progect-link:hover,
-.progect-link:focus {
+.portfolio__link:hover,
+.portfolio__link:focus {
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06),
     0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 
-.progect-link:hover .description-text,
-.progect-link:focus .description-text {
+.portfolio__link:hover .portfolio__description,
+.portfolio__link:focus .portfolio__description {
     transform: translateY(0);
     
 }
 
-.progect-top-wrap {
+.portfolio__card {
     position: relative;
     overflow: hidden;
 }
 
-.progect-img {
+.portfolio__image {
     display: block;
 
     height: auto;
@@ -631,7 +635,7 @@ background-color: #F5F4FA;
     max-width: 100%;
 }
 
-.description-text {
+.portfolio__description {
     position: absolute;
     top: 0;
     left: 0;
@@ -650,13 +654,13 @@ background-color: #F5F4FA;
     
 }
 
-.card-title {
+.portfolio__info {
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
 }
 
     
-.title-progect {
+.portfolio__title {
     margin-top: 0;
     margin-bottom: 4px;
 
@@ -668,7 +672,7 @@ background-color: #F5F4FA;
     color: var(--title-text-color);
 }
     
-.title-text {
+.portfolio__text{
     margin-top: 0;
     margin-bottom: 0;
 
@@ -697,15 +701,19 @@ a {
 }
 
 .footer__logo {
+    display: block;
     color: #FFFFFF;
+    margin-bottom: 20px;
    
 }
 
 .footer__location {
+    display: block;
     color: var(--white-color);
-    text-decoration: none;
     margin-bottom: 9px;
+   
     font-style: normal;
+    line-height: 1.7;
 
 
     transition-property: color;
@@ -727,117 +735,90 @@ a {
     align-items: center;
 }
 
-.footer__list {
+.footer__contacts {
     display: block;
-    margin-top: 20px;
+    
     padding-bottom: 60px;
 }
 
-.mail-items{
-    margin-bottom: 9px;
+.footer__contacts-item {
+    margin-bottom: 9px;  
 }   
 
-.mail-items:last-child {
+.footer__contacts-item:last-child {
     margin-bottom: 0;
 }
 
-
-
-
-.mail {
+.footer__contacts-link {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
 
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
     
-.mail:hover,
-.mail:focus  {
+.footer__contacts-link:hover,
+.footer__contacts-link:focus  {
     color: var(--accent-color);
 }
 
     /* -----Social-list------ */
 
-.footer-icon {
+.footer__social {
     display: block;
     margin-left: 70px;
 }
         
-.social-text {
+.footer__header {
     margin: 0;
 
     font-weight: 700;
+    line-height: 1.14;
     text-transform: uppercase;
+    
+    color: var(--white-color);
+   
 }
 
-.social-list {
+.social-network__footer {
     display: flex;
-    padding-bottom: 100px;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
+
+
+    padding-bottom: 100px;
+    
     gap: 10px;
 }
 
-.social-item {
-    width: 44px;
-    height: 44px;
-}
-
-.social-link {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    border: transparent;
-    background-color: rgba(255, 255, 255, 0.1);
+.social-network__footer-link {
     fill: var(--white-color);
-
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(255, 255, 255, 0.1);  
 }
-
-.social-link:hover,
-.social-link:focus {
-    background-color: var(--accent-color);
-}
-
-
-.team-icon {
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-link:hover .team-icon,
-.team-link:focus .team-icon {
-    fill: #FFFFFF;
-}
-
 
 /* ----------E-mail input------------ */
 
-.email-input-footer {
+.footer__email {
     display: block;
     margin-left: 93px;
 }
 
 
-.email-input-text {
+.footer__text {
 margin: 0;
 font-weight: 700;
 text-transform: uppercase;
 }
 
-.email-item {
+.footer__email-item {
     margin: 0;
 }
 
 
-.email-input {
+.footer__email-input {
     width: 358px;
     padding-left: 16px;
     padding-top: 15px;
@@ -855,7 +836,7 @@ text-transform: uppercase;
     line-height: 1.25;
 }
 
-.email-input-btn {
+.footer__email-btn {
     
     width: 200px;
     height: 50px;
@@ -928,7 +909,7 @@ text-transform: uppercase;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn {
+.close__button {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -948,12 +929,12 @@ text-transform: uppercase;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover,
- .modal-btn:focus{
+.close__button:hover,
+ .close__button:focus{
     fill: var(--accent-color);
  }
 
-.text-form {
+.modal__text {
     display: block;
    
     text-align: center;
@@ -982,7 +963,7 @@ text-transform: uppercase;
     
 }
 
-.form-fild {
+.form__fild {
 position: relative;
 display: block;
 margin-bottom: 28px;
@@ -991,14 +972,14 @@ cursor: pointer;
 
 }
 
-.form-fild:nth-child(4n) {
+.form__fild:nth-child(4n) {
     margin-bottom: 0;
 }
 
 
 
 
-.form-label {
+.form__label {
 position: absolute;
 top: 90%;
 left: 0;
@@ -1012,7 +993,7 @@ line-height: 1.16;
 transform: translateY(-50%);
 }
 
-.form-input {
+.form__input {
 
     width: 100%;
     margin: 0;
@@ -1026,17 +1007,17 @@ transform: translateY(-50%);
     cursor: pointer;
 }
 
-.form-input:focus,
-.form-input:hover {
+.form__input:focus,
+.form__input:hover {
     border: 1px solid var(--accent-color);
 
 }
 
-.form-fild > .form-label {
+.form__fild > .form__label {
     transform: translateY(-50px);
 }
 
-.form-icon {
+.form__icon {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -1049,39 +1030,33 @@ transform: translateY(-50%);
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-fild:focus-within > .form-icon,
-.form-fild:hover > .form-icon  {
+.form__fild:focus-within > .form__icon,
+.form__fild:hover > .form__icon  {
     fill: var(--accent-color); 
     
 }
 
-
-
- textarea {
-     resize: none;
- }
-
- .form-textarea {
+ .form__textarea {
      width: 100%;
      margin: 0;
      padding: 12px 16px;
 
      font-family: inherit;
      cursor: pointer;
+     resize: none;
 
      border: 1px solid rgba(33, 33, 33, 0.2);
      border-radius: 4px;
      transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
- .form-textarea:focus,
- .form-textarea:hover {
+ .form__textarea:focus,
+ .form__textarea:hover {
     border: 1px solid var(--accent-color);
 
 }
 
-
- .laber-comment {
+.form__comment {
      position: absolute;
      top: -10%;
      left: 0;
@@ -1090,16 +1065,16 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
      letter-spacing: 0.01em;
      font-size: 12px;
      line-height: 1.16;
- }
+}
 
 
-.form-chekbox {
+.form__chekbox {
     position: relative;
     margin-top: 15px;
     
 }
 
-.checkbox-label {
+.form__chekbox-label {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1108,7 +1083,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
-.checkbox-input {
+.form__chekbox-input {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -1121,7 +1096,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
-.checkbox-icon {
+.form__chekbox-icon {
     display: inline-block;
     width: 16px;
     height: 15px;
@@ -1133,7 +1108,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 
-.contract-check {
+.form__chekbox-contract {
 
 
     color: var(--accent-color);
@@ -1141,7 +1116,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.checkbox-input:checked + .checkbox-icon {
+.form__chekbox-input:checked + .form__chekbox-icon {
 border-color: var(--accent-color);
 background-color: var(--accent-color);
 background-image: url(../image/full-check.svg);
@@ -1149,15 +1124,8 @@ background-size: cover;
 
 }
 
-.label-text {
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
 
-.checkbox-input:checked ~ .label-text {
-transform: translateX(-20px);
-}
-
-.btn {
+.form__btn {
 display: flex;
     flex-direction: column;
     align-items: center;
@@ -1165,7 +1133,9 @@ display: flex;
 margin-top: 34px;
 }
 
-.form-btn {
+.form__batton {
+
+    
     padding: 10px 52px;
     text-align: center;
     border: none;
