--- a/css/styles.css
+++ b/css/styles.css
@@ -57,16 +57,8 @@ body {
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
-
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo:hover,
-.logo:focus {
-    color: var(--accent-color);
-}
 
 .logo__text {
     color: var(--accent-color);
@@ -106,14 +98,13 @@ body {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+.navbar__item--active .navbar__link,
 .navbar__link:hover,
 .navbar__link:focus {
     color: var(--accent-color);
 }
 
-.navbar__link .current {
-    color: var(--accent-color);
-}
 
 .navbar__link:after {
     content: "";
@@ -127,7 +118,7 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navbar__link.current::after,
+.navbar__item--active .navbar__link::after,
 .navbar__link:hover::after,
 .navbar__link:focus::after {
     background-color: var(--accent-color);
@@ -220,11 +211,11 @@ text-align: center;
     text-transform: uppercase;
 }
 
-    .hero__button {
+    .button {
     display: inline-block;
 
     padding: 10px 32px;
-    min-width: 216px;
+    min-width: 200px;
     text-align: center;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -245,9 +236,9 @@ text-align: center;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero__button:hover,
-.hero__button:focus,
-.hero__button:active {
+.button:hover,
+.button:focus,
+.button:active {
     background-color: #188CE8;
 }
 
@@ -285,7 +276,6 @@ text-align: center;
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-
 
 
     /* Feature */
@@ -380,8 +370,9 @@ text-align: center;
 }
 
     /* Team */
+  
 
-.team__section {
+.team {
 background-color: #F5F4FA;
 }
 
@@ -481,7 +472,8 @@ background-color: #F5F4FA;
 
 
      /* ----------Clients---------- */
-.client__list  {
+ 
+     .client__list  {
     display: flex;
     justify-content: center;
     gap: 30px;
@@ -579,6 +571,7 @@ background-color: #F5F4FA;
 
 
     /* Progects */
+
 
 .portfolio__list {
     display: flex;
@@ -825,6 +818,7 @@ text-transform: uppercase;
     padding-bottom: 15px;
     border-radius: 4px;
     margin-top: 20px;
+    margin-right: 12px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -834,27 +828,6 @@ text-transform: uppercase;
     font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.25;
-}
-
-.footer__email-btn {
-    
-    width: 200px;
-    height: 50px;
-    margin-left: 12px;
-    text-align: center;
-
-        border: none;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        color: var(--white-color);
-        background-color: var(--accent-color);
-    
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.87;
-        letter-spacing: 0.06em;
-        text-decoration: none;
-        cursor: pointer;
 }
 
  /* ---------Модальне вікно-----  */
@@ -1133,31 +1106,6 @@ display: flex;
 margin-top: 34px;
 }
 
-.form__batton {
-
-    
-    padding: 10px 52px;
-    text-align: center;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    text-decoration: none;
-    cursor: pointer;
-    }
-
-    .form-btn:hover,
-    .form-btn:focus {
-        background-color: #188CE8;    
-    }
 
 
 
