--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,59 @@
-.header {
-  height: 80px;
-  border-bottom: 1px solid #ECECEC;
+body {
+  color: #757575;
+  background-color: #FFFFFF;
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
-.header__container {
-  display: flex;
-  align-items: center;
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.section__title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+.title-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .logo {
-  color: var(--logo-tetx-color);
+  color: #000000;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -17,25 +61,125 @@
   letter-spacing: 0.03em;
   text-decoration: none;
 }
-
 .logo__text {
-  color: var(--accent-color);
+  color: #2196F3;
+}
+.logo--footer {
+  display: block;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+.social-network {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.social-network__item {
+  width: 44px;
+  height: 44px;
+}
+.social-network__icon {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-network__link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  border: transparent;
+  fill: #AFB1B8;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: bottom;
+}
+.social-network__link:hover, .social-network__link:focus {
+  background-color: #2196F3;
+}
+.social-network__link:hover .social-network__icon, .social-network__link:focus .social-network__icon {
+  fill: #FFFFFF;
+}
+.social-network__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  padding-bottom: 100px;
+  gap: 10px;
+}
+.social-network__footer-link {
+  fill: #FFFFFF;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.button {
+  display: inline-block;
+  text-align: center;
+  padding: 10px 32px;
+  min-width: 200px;
+  border-radius: 4px;
+  border: 0;
+  color: #FFFFFF;
+  background-color: #2196F3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  text-decoration: none;
+  cursor: pointer;
+}
+.button__primary {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button__primary:hover, .button__primary:focus, .button__primary:active {
+  background-color: #188CE8;
+}
+.button__filters {
+  padding: 6px 22px;
+  min-width: 73px;
+  color: #212121;
+  background-color: #F5F4FA;
+  margin-top: 0;
+  margin-bottom: 50px;
+  font-weight: 500;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button__filters:hover, .button__filters:focus, .button__filters:active {
+  color: #FFFFFF;
+  background-color: #2196F3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.header {
+  height: 80px;
+  border-bottom: 1px solid #ECECEC;
+}
+.header__container {
+  display: flex;
+  align-items: center;
 }
 
 .navbar {
   display: flex;
   align-items: center;
 }
-
 .navbar__list {
   display: flex;
   margin-left: 93px;
 }
-
 .navbar__item:not(:first-child) {
   margin-left: 50px;
 }
-
 .navbar__link {
   position: relative;
   display: flex;
@@ -48,18 +192,14 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  color: var(--title-text-color);
+  color: #212121;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.navbar__item--active .navbar__link,
-.navbar__link:hover,
-.navbar__link:focus {
-  color: var(--accent-color);
+.navbar__link:hover, .navbar__link:focus {
+  color: #2196F3;
 }
-
 .navbar__link:after {
   content: "";
   position: absolute;
@@ -68,13 +208,14 @@
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navbar__link:hover::after, .navbar__link:focus::after {
+  background-color: #2196F3;
 }
 
-.navbar__item--active .navbar__link::after,
-.navbar__link:hover::after,
-.navbar__link:focus::after {
-  background-color: var(--accent-color);
+.navbar__item--active .navbar__link::after {
+  background-color: #2196F3;
 }
 
 .contacts {
@@ -84,11 +225,9 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .contacts__item:not(:first-child) {
   margin-left: 50px;
 }
-
 .contacts__link {
   display: flex;
   align-items: center;
@@ -100,23 +239,587 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  color: var(--primary-text-color);
+  color: #757575;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contacts__link:hover,
-.contacts__linkk:focus {
-  color: var(--accent-color);
+.contacts__link:hover, .contacts__link:focus {
+  color: #2196F3;
 }
-
 .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
+.contacts__item:hover .contacts__icon, .contacts__item:focus .contacts__icon {
+  fill: #2196F3;
+}
 
-.contacts__item:hover .contacts__icon,
-.contacts__item:focus .contacts__icon {
+.hero {
+  display: flex;
+  padding: 200px 0;
+  align-items: center;
+  max-width: 1600px;
+  height: 600px;
+  margin: 0 auto;
+  background-color: #C4C4C4;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.5), rgba(47, 48, 58, 0.5)), url(../image/fon.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.hero__container {
+  text-align: center;
+}
+.hero__title {
+  margin: auto;
+  margin-bottom: 30px;
+  width: 696px;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.feature {
+  padding-bottom: 0;
+}
+.feature__list {
+  display: flex;
+  justify-content: center;
+}
+.feature__item {
+  margin-right: 30px;
+}
+.feature__item__item:nth-child(4n) {
+  margin-right: 0;
+}
+.feature__card {
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  background-color: #F5F4FA;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feature__icon {
+  width: 70px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feature__title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+}
+.feature__text {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.work {
+  padding-bottom: 0;
+}
+.work__list {
+  display: flex;
+}
+.work__item {
+  position: relative;
+  margin-right: 30px;
+  margin-bottom: 0;
+}
+.work__item:nth-child(3n) {
+  margin-right: 0;
+}
+.work__img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+}
+.work__text {
+  display: block;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  padding: 27px 0;
+  margin: 0;
+  font-weight: 700;
+  line-height: 1.14;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.team {
+  background-color: #F5F4FA;
+}
+.team__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-card {
+  margin-right: 30px;
+  margin-top: 0;
+  text-align: center;
+  background-color: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-card:nth-child(4n) {
+  margin-right: 0;
+}
+.team-card__img {
+  display: block;
+  margin: 0;
+}
+.team-card__item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-top: 0;
+}
+.team-card__title {
+  margin-top: 0;
+  margin-bottom: 10;
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+.team-card__profession {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+}
+
+.client__list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.client__item {
+  width: 170px;
+  height: 92px;
+}
+.client__link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(175, 177, 184);
+  fill: #AFB1B8;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client__link:hover, .client__link:focus {
+  border: 1px solid #2196F3;
+}
+.client__icon {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client__link:hover .client__icon, .client__link:focus .client__icon {
+  fill: #2196F3;
+}
+
+.portfolio__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filters {
+  display: flex;
+  justify-content: center;
+}
+.filters__item {
+  margin-left: 8px;
+}
+.filters__item:first-child {
+  margin-left: 0;
+}
+
+.project {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.project:nth-child(3n) {
+  margin-right: 0;
+}
+.project:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+.project__link {
+  display: block;
+  text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project__link:hover, .project__link:focus {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+.project__link:hover .project__description, .project__link:focus .project__description {
+  transform: translateY(0);
+}
+.project__card {
+  position: relative;
+  overflow: hidden;
+}
+.project__image {
+  display: block;
+  height: auto;
+  margin: 0;
+  max-width: 100%;
+}
+.project__description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+  margin: 0;
+  height: 100%;
+  color: #FFFFFF;
+  background-color: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.55;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project__info {
+  padding: 20px 24px;
+  border: 1px solid #EEEEEE;
+}
+.project__title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.project__text {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.footer {
+  height: 252px;
+  padding: 60px 0;
+  text-align: left;
+  background-color: #2F303A;
+}
+.footer__container {
+  display: flex;
+  align-items: baseline;
+}
+.footer__inner {
+  display: block;
+  margin-left: 70px;
+}
+.footer__header {
+  margin: 0;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.footer__email {
+  display: block;
+  margin-left: 93px;
+}
+
+.info__location {
+  display: block;
+  color: #FFFFFF;
+  margin-bottom: 9px;
+  font-style: normal;
+  line-height: 1.7;
+  text-decoration: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.info__location:hover, .info__location:focus {
+  color: #2196F3;
+}
+.info__contacts {
+  display: block;
+  padding-bottom: 60px;
+}
+.info__item {
+  margin-bottom: 9px;
+}
+.info__item:last-child {
+  margin-bottom: 0;
+}
+.info__link {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.info__link:hover, .info__link:focus {
+  color: #2196F3;
+}
+
+.email {
+  margin: 0;
+}
+.email__input {
+  width: 358px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 4px;
+  margin-top: 20px;
+  margin-right: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background-color: #2F303A;
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  border-radius: 4px;
+  padding: 40px;
+  cursor: pointer;
+  background-color: var(--white-color);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close__button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--white-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close__button:hover,
+.close__button:focus {
   fill: var(--accent-color);
+}
+
+.modal__text {
+  display: block;
+  text-align: center;
+  margin-top: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--title-text-color);
+}
+
+.form {
+  width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form__fild {
+  position: relative;
+  display: block;
+  margin-bottom: 28px;
+  cursor: pointer;
+}
+
+.form__fild:nth-child(4n) {
+  margin-bottom: 0;
+}
+
+.form__label {
+  position: absolute;
+  top: 90%;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 0.01em;
+  font-size: 12px;
+  line-height: 1.16;
+  transform: translateY(-50%);
+}
+
+.form__input {
+  width: 100%;
+  margin: 0;
+  padding: 11px 12px;
+  padding-left: 42px;
+  font-family: inherit;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.form__input:focus,
+.form__input:hover {
+  border: 1px solid var(--accent-color);
+}
+
+.form__fild > .form__label {
+  transform: translateY(-50px);
+}
+
+.form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 18px;
+  height: 18px;
+  display: inline-block;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__fild:focus-within > .form__icon,
+.form__fild:hover > .form__icon {
+  fill: var(--accent-color);
+}
+
+.form__textarea {
+  width: 100%;
+  margin: 0;
+  padding: 12px 16px;
+  font-family: inherit;
+  cursor: pointer;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__textarea:focus,
+.form__textarea:hover {
+  border: 1px solid var(--accent-color);
+}
+
+.form__comment {
+  position: absolute;
+  top: -10%;
+  left: 0;
+  transform: translateY(-50%);
+  letter-spacing: 0.01em;
+  font-size: 12px;
+  line-height: 1.16;
+}
+
+.form__chekbox {
+  position: relative;
+  margin-top: 15px;
+}
+
+.form__chekbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form__chekbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.form__chekbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+}
+
+.form__chekbox-contract {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+
+.form__chekbox-input:checked + .form__chekbox-icon {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url(../image/full-check.svg);
+  background-size: cover;
+}
+
+.form__btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 34px;
 }/*# sourceMappingURL=main.css.map */
