--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,27 @@
-@import "./utils/varibles";
+@import "./utils/vars";
+@import "./components/common";
+@import "./components/logo";
+@import "./components/social";
+@import "./components/buttons";
 
-@import "./components/page-header";
+@import "./layouts/page-header";
+@import "./layouts/hero";
+@import "./layouts/feature";
+@import "./layouts/work";
+@import "./layouts/team";
+@import "./layouts/client";
+@import "./layouts/portfolio";
+@import "./layouts/footer";
+@import "./layouts/modal";
+@import "./layouts/form";
+
+
+
+
+
+
+
+
+
+
+
