--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,10 @@
 @import "./layouts/client";
 @import "./layouts/portfolio";
 @import "./layouts/footer";
+@import "./layouts/backdrop";
 @import "./layouts/modal";
 @import "./layouts/form";
+
 
 
 
