--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -27,6 +27,9 @@
         &:active {
             background-color: $btn-focus-color;
         }
+
+
+        
     }
 
     &__filters {
@@ -43,17 +46,28 @@
         line-height: 1.62;
         letter-spacing: 0.03em;
 
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-        &:hover,
-        &:focus,
-        &:active {
-            color: $white-color;
+        transition-property: background-color, box-shadow, color;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+
+        &:hover {
             background-color:  $accent-color;
             box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-        }   
+            color: $white-color;
+        }
+
+        &:focus {
+            background-color:  $accent-color;
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+            color: $white-color;
+        }
+
+        &--active {
+            background-color:  $accent-color;
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+            color: $white-color;
+        }
+        
     }
 }
 
