--- a/sass/layouts/_form.scss
+++ b/sass/layouts/_form.scss
@@ -4,178 +4,161 @@
     margin-left: auto;
     margin-right: auto;
     
+    &__fild {
+        position: relative;
+        display: block;
+        margin-bottom: 28px;
+        cursor: pointer;
+    }
+
+    &__fild-textarea {
+        margin-bottom: 0;
+    }
     
+    &__text {
+        position: absolute;
+        top: 80%;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        
+        letter-spacing: 0.01em;
+        font-size: 12px;
+        line-height: 1.16;
+        
+        transform: translateY(-50%);
+    }
+
+    &__input {
+
+        width: 100%;
+        margin: 0;
+        padding: 11px 12px;
+        padding-left: 42px;
+        font-family: inherit;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
     
-}
-
-.form__fild {
-position: relative;
-display: block;
-margin-bottom: 28px;
-cursor: pointer;
-
-
-}
-
-.form__fild:nth-child(4n) {
-    margin-bottom: 0;
-}
-
-
-
-
-.form__label {
-position: absolute;
-top: 90%;
-left: 0;
-display: flex;
-flex-direction: column;
-
-letter-spacing: 0.01em;
-font-size: 12px;
-line-height: 1.16;
-
-transform: translateY(-50%);
-}
-
-.form__input {
-
-    width: 100%;
-    margin: 0;
-    padding: 11px 12px;
-    padding-left: 42px;
-    font-family: inherit;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-}
-
-.form__input:focus,
-.form__input:hover {
-    border: 1px solid var(--accent-color);
-
-}
-
-.form__fild > .form__label {
-    transform: translateY(-50px);
-}
-
-.form__icon {
-    position: absolute;
-    top: 50%;
-    left: 12px;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
     
-    width: 18px;
-    height: 18px;
-    display: inline-block;
+        &:focus,
+        &:hover {
+            border: 1px solid $accent-color;
+        }
+    }
 
-transform: translateY(-50%);
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form__fild:focus-within > .form__icon,
-.form__fild:hover > .form__icon  {
-    fill: var(--accent-color); 
+
+    &__fild > &__text {
+        transform: translateY(-50px);
+    }
+
+    &__icon {
+        position: absolute;
+        top: 50%;
+        left: 12px;
+        
+        width: 18px;
+        height: 18px;
+        display: inline-block;
     
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__fild:focus-within > &__icon,
+    &__fild:hover > &__icon  {
+        fill: $accent-color; 
+    }
+
+    &__textarea {
+        width: 100%;
+        margin: 0;
+        padding: 12px 16px;
+   
+        font-family: inherit;
+        cursor: pointer;
+        resize: none;
+   
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:focus,
+        &:hover {
+            border: 1px solid $accent-color;
+        }
+    }
+
+    &__comment {
+        position: absolute;
+        top: -10%;
+        left: 0;
+        transform: translateY(-50%);
+   
+        letter-spacing: 0.01em;
+        font-size: 12px;
+        line-height: 1.16;
+    }
+
+    &__inner {
+        display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        margin-top: 30px;
+        }
 }
 
- .form__textarea {
-     width: 100%;
-     margin: 0;
-     padding: 12px 16px;
 
-     font-family: inherit;
-     cursor: pointer;
-     resize: none;
-
-     border: 1px solid rgba(33, 33, 33, 0.2);
-     border-radius: 4px;
-     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
-
- .form__textarea:focus,
- .form__textarea:hover {
-    border: 1px solid var(--accent-color);
-
-}
-
-.form__comment {
-     position: absolute;
-     top: -10%;
-     left: 0;
-     transform: translateY(-50%);
-
-     letter-spacing: 0.01em;
-     font-size: 12px;
-     line-height: 1.16;
-}
-
-
-.form__chekbox {
+.chekbox {
     position: relative;
-    margin-top: 15px;
+    margin-top: 20px;
+
+    &__label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__input {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+    }
+
+    &__icon {
+        display: inline-block;
+        width: 16px;
+        height: 15px;
+        margin-right: 7px;
     
-}
+        border: 2px solid $primary-text-color;
+        border-radius: 2px; 
+    }
 
-.form__chekbox-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    &__contract {
+        color: $accent-color;
+        border-bottom:  1px solid $accent-color;
+        text-decoration: none;
+    }
 
-  
-  
-}
-
-.form__chekbox-input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+    &__input:checked + &__icon {
+        border-color: $accent-color;
+        background-color: $accent-color;
+        background-image: url(../image/full-check.svg);
+        background-size: cover;
+    }
 }
 
 
 
-.form__chekbox-icon {
-    display: inline-block;
-    width: 16px;
-    height: 15px;
-    margin-right: 7px;
-   
 
-    border: 2px solid var(--title-text-color);
-    border-radius: 2px; 
-   
-}
-
-.form__chekbox-contract {
-
-
-    color: var(--accent-color);
-    text-decoration: underline;
-
-}
-
-.form__chekbox-input:checked + .form__chekbox-icon {
-border-color: var(--accent-color);
-background-color: var(--accent-color);
-background-image: url(../image/full-check.svg);
-background-size: cover;
-
-}
-
-
-.form__btn {
-display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-margin-top: 34px;
-}
 
 
