--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -1,33 +1,3 @@
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    height: 100%;
-    
-
-    background-color: rgba(0, 0, 0, 0.2);
-
-    opacity: 1;
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
-
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.5);
-}
-
 .modal {
     position: absolute;
     top: 50%;
@@ -39,54 +9,53 @@
     padding: 40px;
     cursor: pointer;
 
-    background-color: var(--white-color);
+    background-color: $white-color;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &__button {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: auto;
+        top: 8px;
+        right: 8px;
+        border-radius: 50%;
+        cursor: pointer;
+    
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: $white-color;
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus{
+           fill: $accent-color;
+        }
+       
+    }
+
+    &__text {
+        display: block;
+       
+        text-align: center;
+    
+        margin-top: auto;
+        margin-left: auto;
+        margin-bottom:  30px;
+      
+    
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        color: $title-text-color;
+    }
 }
-
-.close__button {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    top: 8px;
-    right: 8px;
-    border-radius: 50%;
-    cursor: pointer;
-
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--white-color);
-
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close__button:hover,
- .close__button:focus{
-    fill: var(--accent-color);
- }
-
-.modal__text {
-    display: block;
-   
-    text-align: center;
-
-    margin-top: auto;
-    margin-left: auto;
-    margin-bottom:  30px;
-  
-
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    color: var(--title-text-color);
-}
-
-
