--- a/sass/layouts/_page-header.scss
+++ b/sass/layouts/_page-header.scss
@@ -18,12 +18,31 @@
     }
 
     &__item {
-
         &:not(:first-child) {
             margin-left: 50px;
         }
 
-    }
+        &:hover {
+            .navbar__link {
+                color: $accent-color;
+            }
+        }
+
+        &:focus {
+            .navbar__link {
+                color: $accent-color;
+            }
+        }
+
+        &--active {
+            .navbar__link {
+                color: $accent-color;
+            }
+        }
+    } 
+
+
+    
 
     &__link {
         position: relative;
@@ -43,13 +62,8 @@
         transition-property: color;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
-        &:hover,
-        &:focus {
-        color: $accent-color;
-        }
 
-        &:after {
+        &::after {
             content: "";
             position: absolute;
             bottom: 0;
@@ -60,18 +74,11 @@
             
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-
-        &:hover::after,
-        &:focus::after {
-            background-color: $accent-color;
-        }
     }
 
-   
-}
-
-.navbar__item--active .navbar__link::after {
-    background-color: $accent-color;
+    &__item--active &__link::after {
+        background-color: $accent-color;
+    }
 }
 
 
