--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -18,6 +18,11 @@
     cursor: pointer;
     
     &__primary {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -29,8 +34,7 @@
         }
 
 
-        
-    }
+        }
 
     &__filters {
         padding: 6px 22px;
