--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -40,7 +40,7 @@
         fill: $white-color;
     }
     
-    &__footer {
+    &--footer {
         display: flex;
         justify-content: center;
         align-items: center;
